--- a/Neighborhoods_Helphub_mvc/Neighborhoods_Helphub_mvc/pom.xml
+++ b/Neighborhoods_Helphub_mvc/Neighborhoods_Helphub_mvc/pom.xml
@@ -86,6 +86,12 @@
     <version>1.2</version><!--$NO-MVN-MAN-VER$-->
 </dependency>
 
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-mail</artifactId>
+</dependency>
+
+
 	</dependencies>
 
 	<build>
