--- a/Neighborhoods_Helphub_mvc/Neighborhoods_Helphub_mvc/src/main/resources/application.properties
+++ b/Neighborhoods_Helphub_mvc/Neighborhoods_Helphub_mvc/src/main/resources/application.properties
@@ -6,3 +6,15 @@ server.port=8083
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=sunshineheight.member@gmail.com
+spring.mail.password=ijcn lxow mgkv jivk
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
